tinyc/test/good/assign-with-use1.c
int main()
{
    unsigned x = 10;
    x = x * (x + 1);
    assert( x == 110 );
    return 0;
}
