tinyc/test/bad/assert-is-void.c
int main()
{
    1 + assert( 1 );
    return 0;
}
